# tensor-man

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker-build.yml  test.yml
docs/: signature.md
src/: main.rs
src/cli/: graph.rs  inspect.rs  mod.rs  signing.rs
src/core/: docker.rs  mod.rs  signing.rs
src/core/docker/: inspection.rs  mod.rs
src/core/gguf/: inspect.rs  mod.rs
src/core/handlers/: mod.rs
src/core/handlers/gguf/: mod.rs
src/core/handlers/onnx/: mod.rs
src/core/handlers/onnx/protos/: onnx.proto
src/core/handlers/pytorch/: inspect.py  inspect.requirements  mod.rs
src/core/handlers/safetensors/: mod.rs
src/core/onnx/: graph.rs  inspect.rs  mod.rs
src/core/pytorch/: inspect.Dockerfile  inspect.py  mod.rs
src/core/safetensors/: mod.rs
