[package]
name = "tensor-man"
description = "A small utility to inspect and validate safetensors and ONNX files."
authors = ["Simone Margaritelli (simone@dreadnode.io)"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/dreadnode/tman"
homepage = "https://github.com/dreadnode/tman"

[[bin]]
name = "tman"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.91"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
dot_graph = "0.2.3"
humansize = "2.1.3"
memmap2 = "0.9.5"
protobuf = { version = "3.7.1", features = ["with-bytes"] }
rayon = "1.10.0"
ring = "0.17.8"
safetensors = "0.4.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

[build-dependencies]
protobuf-codegen = "3.7.1"

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
